// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult should render Error 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  Error...
</Box>
`;

exports[`SearchResult should render Loading 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  <Loader />
</Box>
`;

exports[`SearchResult should render products 1`] = `
<Grid
  result={true}
>
  <Filter
    items={
      Array [
        Object {
          "channel": "TV8",
          "date": "9:00",
          "header": "__TITLE__",
          "imageURL": "__IMAGE_URL__",
          "newsUrl": "__URL__",
        },
      ]
    }
    options={
      Array [
        "NTV",
        "TV8",
        "JurnalTV",
      ]
    }
    productName="MD"
  >
    <ProductList />
  </Filter>
</Grid>
`;

exports[`SearchResult should render when data is undefined 1`] = `
<Box
  justifyContent="center"
  marginTop="s48"
>
  Error...
</Box>
`;
